add ben's name and discord server link

--- a/DataCheckpoint_Group052_FA23.ipynb
+++ b/DataCheckpoint_Group052_FA23.ipynb
@@ -24,7 +24,7 @@
    "source": [
     "# Names\n",
     "\n",
-    "- Ant Man\n",
+    "- Benjamin Xia\n",
     "- Hulk\n",
     "- Iron Man\n",
     "- Thor\n",
@@ -147,7 +147,7 @@
    "outputs": [],
    "source": [
     "## YOUR CODE TO LOAD/CLEAN/TIDY/WRANGLE THE DATA GOES HERE\n",
-    "## FEEL FREE TO ADD MULTIPLE CELLS PER SECTION "
+    "## FEEL FREE TO ADD MULTIPLE CELLS PER SECTION"
    ]
   },
   {
@@ -164,7 +164,7 @@
    "outputs": [],
    "source": [
     "## YOUR CODE TO LOAD/CLEAN/TIDY/WRANGLE THE DATA GOES HERE\n",
-    "## FEEL FREE TO ADD MULTIPLE CELLS PER SECTION "
+    "## FEEL FREE TO ADD MULTIPLE CELLS PER SECTION"
    ]
   },
   {
