--- a/FinalProject_Group052_FA23.ipynb
+++ b/FinalProject_Group052_FA23.ipynb
@@ -15,7 +15,7 @@
     "\n",
     "# Names\n",
     "\n",
-    "- Ant Man\n",
+    "- Benjamin Xia\n",
     "- Hulk\n",
     "- Iron Man\n",
     "- Thor\n",
@@ -142,7 +142,7 @@
    "outputs": [],
    "source": [
     "## YOUR CODE TO LOAD/CLEAN/TIDY/WRANGLE THE DATA GOES HERE\n",
-    "## FEEL FREE TO ADD MULTIPLE CELLS PER SECTION "
+    "## FEEL FREE TO ADD MULTIPLE CELLS PER SECTION"
    ]
   },
   {
@@ -159,7 +159,7 @@
    "outputs": [],
    "source": [
     "## YOUR CODE TO LOAD/CLEAN/TIDY/WRANGLE THE DATA GOES HERE\n",
-    "## FEEL FREE TO ADD MULTIPLE CELLS PER SECTION "
+    "## FEEL FREE TO ADD MULTIPLE CELLS PER SECTION"
    ]
   },
   {
