--- a/ProjectProposal_Group052_FA23.ipynb
+++ b/ProjectProposal_Group052_FA23.ipynb
@@ -13,7 +13,7 @@
    "source": [
     "# Names\n",
     "\n",
-    "- Ant Man\n",
+    "- Benjamin Xia\n",
     "- Hulk\n",
     "- Iron Man\n",
     "- Thor\n",
