Project idea TODO: data, ethics, team expectations, timeline, background/prior work

--- a/ProjectProposal_Group052_FA23.ipynb
+++ b/ProjectProposal_Group052_FA23.ipynb
@@ -15,9 +15,9 @@
     "\n",
     "- Benjamin Xia\n",
     "- Kailey Wong\n",
-    "- Iron Man\n",
-    "- Thor\n",
-    "- Wasp"
+    "- Jesus Tello\n",
+    "- Jungwoon Ko\n",
+    "- Yusuke Yanagawa"
    ]
   },
   {
@@ -35,7 +35,8 @@
     "-  Make sure what you're measuring (variables) to answer the question is clear\n",
     "\n",
     "What is your research question? Include the specific question you're setting out to answer. This question should be specific, answerable with data, and clear. A general question with specific subquestions is permitted. (1-2 sentences)\n",
-    "\n"
+    "\n",
+    "How much of an impact do crypto miners actually have on GPU prices and supply for individual customers (e.g. gamers)?"
    ]
   },
   {
@@ -88,7 +89,7 @@
     "- Ensure that this hypothesis is clear to readers\n",
     "- Explain why you think this will be the outcome (what was your thinking?)\n",
     "\n",
-    "What is your main hypothesis/predictions about what the answer to your question is? Briefly explain your thinking. (2-3 sentences)"
+    "We suspect that cryptocurrency miners do have some impact on GPU prices and supply, though its impact is often exaggerated by gamers on online communities as external factors such as chip (semiconductor) shortages and the artifiical intelligence boom often have a greater impact on price and supply. We believe this to be the case because many vendors often place limits on how many GPU's customers can purchase at at a time, and many of the GPU shortages have coincided with chip shortages.\n"
    ]
   },
   {
