--- a/ProjectProposal_Group052_FA23.ipynb
+++ b/ProjectProposal_Group052_FA23.ipynb
@@ -36,7 +36,7 @@
     "\n",
     "What is your research question? Include the specific question you're setting out to answer. This question should be specific, answerable with data, and clear. A general question with specific subquestions is permitted. (1-2 sentences)\n",
     "\n",
-    "How much of an impact do crypto miners actually have on GPU prices and supply for individual customers (e.g. gamers)?"
+    "How much of an impact do crypto miners actually have on GPU prices and supply for individual customers (e.g. gamers)? Are there other factors that have a larger impact?"
    ]
   },
   {
@@ -70,7 +70,9 @@
     "To understand the HTML here, `<a name=\"#...\"> </a>` is a tag that allows you produce a named reference for a given location.  Markdown has the construciton `[text with hyperlink](#named reference)` that will produce a clickable link that transports you the named reference.\n",
     "\n",
     "1. <a name=\"cite_note-1\"></a> [^](#cite_ref-1) Lorenz, T. (9 Dec 2021) Birds Aren’t Real, or Are They? Inside a Gen Z Conspiracy Theory. *The New York Times*. https://www.nytimes.com/2021/12/09/technology/birds-arent-real-gen-z-misinformation.html \n",
-    "2. <a name=\"cite_note-2\"></a> [^](#cite_ref-2) Also refs should be important to the background, not some randomly chosen vaguely related stuff. Include a web link if possible in refs as above.\n"
+    "2. <a name=\"cite_note-2\"></a> [^](#cite_ref-2) Also refs should be important to the background, not some randomly chosen vaguely related stuff. Include a web link if possible in refs as above.\n",
+    "\n",
+    "Yusuke/Ben"
    ]
   },
   {
@@ -104,7 +106,9 @@
    "metadata": {},
    "source": [
     "1. Explain what the **ideal** dataset you would want to answer this question. (This should include: What variables? How many observations? Who/what/how would these data be collected? How would these data be stored/organized?)\n",
-    "1. Search for potential **real** datasets that could provide you with something useful for this project.  You do not have to find every piece of data you will use, but you do need to have demonstrated some idea that (a) this data is gettable and (b) that this data may be different from what your ideal is"
+    "1. Search for potential **real** datasets that could provide you with something useful for this project.  You do not have to find every piece of data you will use, but you do need to have demonstrated some idea that (a) this data is gettable and (b) that this data may be different from what your ideal is\n",
+    "\n",
+    "Jesus"
    ]
   },
   {
@@ -128,7 +132,9 @@
     "- Are there potential biases in your dataset(s), in terms of who it composes, and how it was collected, that may be problematic in terms of it allowing for equitable analysis? (For example, does your data exclude particular populations, or is it likely to reflect particular human biases in a way that could be a problem?)\n",
     "- How will you set out to detect these specific biases before, during, and after/when communicating your analysis?\n",
     "- Are there any other issues related to your topic area, data, and/or analyses that are potentially problematic in terms of data privacy and equitable impact?\n",
-    "- How will you handle issues you identified?"
+    "- How will you handle issues you identified?\n",
+    "\n",
+    "Kailey"
    ]
   },
   {
@@ -145,10 +151,11 @@
     "\n",
     "Read over the [COGS108 Team Policies](https://github.com/COGS108/Projects/blob/master/COGS108_TeamPolicies.md) individually. Then, include your group’s expectations of one another for successful completion of your COGS108 project below. Discuss and agree on what all of your expectations are. Discuss how your team will communicate throughout the quarter and consider how you will communicate respectfully should conflicts arise. By including each member’s name above and by adding their name to the submission, you are indicating that you have read the COGS108 Team Policies, accept your team’s expectations below, and have every intention to fulfill them. These expectations are for your team’s use and benefit — they won’t be graded for their details.\n",
     "\n",
-    "* *Team Expectation 1*\n",
-    "* *Team Expectation 2*\n",
-    "* *Team Expecation 3*\n",
-    "* ..."
+    "* Attend weekly meetings on Sunday 9pm or have a very good excuse to not make it.\n",
+    "* On weeks where some project component is due on Wednesday, attempt to have a working draft (e.g. 90% complete) by Monday, have everyone look over everything and revise on Tuesday, and finalize on Wednesday.\n",
+    "* If you ghost meetings without saying anything or fail to make meaningful attempts to contribute, your name will not be added to the notebook corresponding to whatever project component is due, and there will be a note that you did not contribute underneath everyone else's names.\n",
+    "* Don't sabotage other people's stuff >:(\n",
+    "* Don't plagiarize :)"
    ]
   },
   {
@@ -170,13 +177,15 @@
     "\n",
     "| Meeting Date  | Meeting Time| Completed Before Meeting  | Discuss at Meeting |\n",
     "|---|---|---|---|\n",
-    "| 1/20  |  1 PM | Read & Think about COGS 108 expectations; brainstorm topics/questions  | Determine best form of communication; Discuss and decide on final project topic; discuss hypothesis; begin background research | \n",
-    "| 1/26  |  10 AM |  Do background research on topic | Discuss ideal dataset(s) and ethics; draft project proposal | \n",
-    "| 2/1  | 10 AM  | Edit, finalize, and submit proposal; Search for datasets  | Discuss Wrangling and possible analytical approaches; Assign group members to lead each specific part   |\n",
-    "| 2/14  | 6 PM  | Import & Wrangle Data (Ant Man); EDA (Hulk) | Review/Edit wrangling/EDA; Discuss Analysis Plan   |\n",
-    "| 2/23  | 12 PM  | Finalize wrangling/EDA; Begin Analysis (Iron Man; Thor) | Discuss/edit Analysis; Complete project check-in |\n",
-    "| 3/13  | 12 PM  | Complete analysis; Draft results/conclusion/discussion (Wasp)| Discuss/edit full project |\n",
-    "| 3/19  | Before 11:59 PM  | NA | Turn in Final Project & Group Project Surveys |"
+    "| 11/5  | 9 PM | Read & Think about COGS 108 expectations; brainstorm topics/questions  | Determine best form of communication; Discuss and decide on final project topic; discuss hypothesis; begin background research | \n",
+    "| 11/12  |  9 PM |  Do background research on topic | Discuss ideal dataset(s) and ethics; draft project proposal | \n",
+    "| 11/19  | 9 PM  | Edit, finalize, and submit proposal; Search for datasets  | Discuss Wrangling and possible analytical approaches; Assign group members to lead each specific part   |\n",
+    "| 11/26  |9 PM  | Import & Wrangle Data (Ant Man); EDA (Hulk) | Review/Edit wrangling/EDA; Discuss Analysis Plan   |\n",
+    "| TBD  | 9 PM  | Finalize wrangling/EDA; Begin Analysis (Iron Man; Thor) | Discuss/edit Analysis; Complete project check-in |\n",
+    "| TBD  | 9 PM  | Complete analysis; Draft results/conclusion/discussion (Wasp)| Discuss/edit full project |\n",
+    "| TBD | Before 11:59 PM  | NA | Turn in Final Project & Group Project Surveys |\n",
+    "\n",
+    "Jungwoon"
    ]
   }
  ],
