--- a/DataCheckpoint_Group052_FA23.ipynb
+++ b/DataCheckpoint_Group052_FA23.ipynb
@@ -26,7 +26,7 @@
     "\n",
     "- Benjamin Xia\n",
     "- Kailey Wong\n",
-    "- Iron Man\n",
+    "- Jesus Tello\n",
     "- Thor\n",
     "- Wasp"
    ]
