--- a/FinalProject_Group052_FA23.ipynb
+++ b/FinalProject_Group052_FA23.ipynb
@@ -17,7 +17,7 @@
     "\n",
     "- Benjamin Xia\n",
     "- Kailey Wong\n",
-    "- Iron Man\n",
+    "- Jesus Tello\n",
     "- Thor\n",
     "- Wasp\n",
     "\n",
