filter steam by cpu/gpu

--- a/DataCheckpoint_Group052_FA23.ipynb
+++ b/DataCheckpoint_Group052_FA23.ipynb
@@ -106,7 +106,7 @@
     "- Dataset #1\n",
     "  - Dataset Name: Steam Hardware Surveys\n",
     "  - Link to the dataset: https://raw.githubusercontent.com/jdegene/steamHWsurvey/master/shs.csv\n",
-    "  - Number of observations: 34713\n",
+    "  - Number of observations: 12993\n",
     "  - Number of variables: 5\n",
     "- Dataset #2\n",
     "  - Dataset Name:\n",
@@ -129,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -138,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -223,7 +223,7 @@
        "4  2008-11-01  AMD CPU Speeds  2.3 Ghz to 2.69 Ghz  0.0001      0.0727"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -238,7 +238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -323,7 +323,7 @@
        "4  2015-01-01  Free Hard Drive Space  750 GB to 999 GB  0.0020      0.0879"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -332,29 +332,93 @@
     "# Filter the survey responses by date\n",
     "# We will only be looking at data from the last 8 years, or since 2015\n",
     "# Reset the indexes\n",
-    "steam_survey = steam_survey[pd.to_datetime(steam_survey['date']).dt.year >= 2015].reset_index().drop(labels='index',axis=1)\n",
-    "steam_survey.head()"
+    "steam_dates = steam_survey[pd.to_datetime(steam_survey['date']).dt.year >= 2015].reset_index().drop(labels='index',axis=1)\n",
+    "steam_dates.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(34713, 5)"
+       "category\n",
+       "Video Card Description              9599\n",
+       "Multi-Monitor Desktop Resolution    5645\n",
+       "Language                            2987\n",
+       "Primary Display Resolution          2422\n",
+       "Physical CPUs                       2327\n",
+       "OS Version                          2174\n",
+       "Other Settings                      1741\n",
+       "System RAM                          1516\n",
+       "VRAM                                1347\n",
+       "VR Headsets                         1182\n",
+       "Intel CPU Speeds                    1067\n",
+       "Free Hard Drive Space                999\n",
+       "Total Hard Drive Space               820\n",
+       "Network Speed                        656\n",
+       "Microphones                          231\n",
+       "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# What types of categories are in this dataset?\n",
+    "steam_dates['category'].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "category\n",
+       "Video Card Description    9599\n",
+       "Physical CPUs             2327\n",
+       "Intel CPU Speeds          1067\n",
+       "Name: count, dtype: int64"
+      ]
+     },
+     "execution_count": 47,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# We only care about CPU/GPU data\n",
+    "steam_cpu_gpu = steam_dates[steam_dates['category'].isin(['Video Card Description', 'Physical CPUs', 'Intel CPU Speeds'])]\n",
+    "\n",
+    "steam_cpu_gpu['category'].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(12993, 5)"
+      ]
+     },
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# What is the shape of this data set?\n",
-    "steam_survey.shape"
+    "steam_cpu_gpu.shape"
    ]
   },
   {
