dropna steam, add bitcoin csvs

--- a/DataCheckpoint_Group052_FA23.ipynb
+++ b/DataCheckpoint_Group052_FA23.ipynb
@@ -106,25 +106,27 @@
     "- Dataset #1\n",
     "  - Dataset Name: Steam Hardware Surveys\n",
     "  - Link to the dataset: https://raw.githubusercontent.com/jdegene/steamHWsurvey/master/shs.csv\n",
-    "  - Number of observations: 12993\n",
+    "  - Number of observations: 12937\n",
     "  - Number of variables: 5\n",
     "- Dataset #2\n",
+    "  - Dataset Name: Bitcoin USD Historical Data\n",
+    "  - Link to the dataset: https://finance.yahoo.com/quote/BTC-USD/history?period1=1420070400&period2=1698710400&interval=1mo&filter=history&frequency=1mo&includeAdjustedClose=true\n",
+    "  - Number of observations:\n",
+    "  - Number of variables:\n",
+    "- Dataset #3\n",
+    "    - Dataset Name: Ethereum USD Historical Data\n",
+    "  - Link to the dataset: https://finance.yahoo.com/quote/ETH-USD/history?period1=1510185600&period2=1698796800&interval=1mo&filter=history&frequency=1mo&includeAdjustedClose=true\n",
+    "  - Number of observations:\n",
+    "  - Number of variables:\n",
+    "- Dataset #4\n",
     "  - Dataset Name:\n",
     "  - Link to the dataset:\n",
     "  - Number of observations:\n",
     "  - Number of variables:\n",
-    "- Dataset #3\n",
     "\n",
     "Now write 2 - 5 sentences describing each dataset here. Include a short description of the important variables in the dataset; what the metrics and datatypes are, what concepts they may be proxies for. Include information about how you would need to wrangle/clean/preprocess the dataset\n",
     "\n",
     "If you plan to use multiple datasets, add a few sentences about how you plan to combine these datasets."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Steam Hardware Surveys"
    ]
   },
   {
@@ -134,6 +136,13 @@
    "outputs": [],
    "source": [
     "import pandas as pd"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Steam Hardware Surveys"
    ]
   },
   {
@@ -375,7 +384,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [
     {
@@ -388,7 +397,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 76,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -402,16 +411,283 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 78,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>date</th>\n",
+       "      <th>category</th>\n",
+       "      <th>name</th>\n",
+       "      <th>change</th>\n",
+       "      <th>percentage</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>14389</th>\n",
+       "      <td>2018-09-01</td>\n",
+       "      <td>Video Card Description</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.0021</td>\n",
+       "      <td>0.0021</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14707</th>\n",
+       "      <td>2018-10-01</td>\n",
+       "      <td>Video Card Description</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>-0.0002</td>\n",
+       "      <td>0.0019</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15035</th>\n",
+       "      <td>2018-11-01</td>\n",
+       "      <td>Video Card Description</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.0002</td>\n",
+       "      <td>0.0021</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15369</th>\n",
+       "      <td>2018-12-01</td>\n",
+       "      <td>Video Card Description</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.0002</td>\n",
+       "      <td>0.0023</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15699</th>\n",
+       "      <td>2019-01-01</td>\n",
+       "      <td>Video Card Description</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.0001</td>\n",
+       "      <td>0.0024</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "             date                category name  change  percentage\n",
+       "14389  2018-09-01  Video Card Description  NaN  0.0021      0.0021\n",
+       "14707  2018-10-01  Video Card Description  NaN -0.0002      0.0019\n",
+       "15035  2018-11-01  Video Card Description  NaN  0.0002      0.0021\n",
+       "15369  2018-12-01  Video Card Description  NaN  0.0002      0.0023\n",
+       "15699  2019-01-01  Video Card Description  NaN  0.0001      0.0024"
+      ]
+     },
+     "execution_count": 78,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# check if there is any missing data\n",
+    "steam_cpu_gpu[steam_cpu_gpu.isnull().any(axis=1)].head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 80,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>date</th>\n",
+       "      <th>category</th>\n",
+       "      <th>name</th>\n",
+       "      <th>change</th>\n",
+       "      <th>percentage</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>2015-01-01</td>\n",
+       "      <td>Intel CPU Speeds</td>\n",
+       "      <td>1.4 Ghz to 1.49 Ghz</td>\n",
+       "      <td>0.0002</td>\n",
+       "      <td>0.0065</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>2015-01-01</td>\n",
+       "      <td>Intel CPU Speeds</td>\n",
+       "      <td>1.5 Ghz to 1.69 Ghz</td>\n",
+       "      <td>0.0001</td>\n",
+       "      <td>0.0182</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>2015-01-01</td>\n",
+       "      <td>Intel CPU Speeds</td>\n",
+       "      <td>1.7 Ghz to 1.99 Ghz</td>\n",
+       "      <td>-0.0005</td>\n",
+       "      <td>0.0480</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>2015-01-01</td>\n",
+       "      <td>Intel CPU Speeds</td>\n",
+       "      <td>2.0 Ghz to 2.29 Ghz</td>\n",
+       "      <td>-0.0025</td>\n",
+       "      <td>0.0963</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>2015-01-01</td>\n",
+       "      <td>Intel CPU Speeds</td>\n",
+       "      <td>2.3 Ghz to 2.69 Ghz</td>\n",
+       "      <td>-0.0002</td>\n",
+       "      <td>0.2202</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>34708</th>\n",
+       "      <td>2023-10-01</td>\n",
+       "      <td>Video Card Description</td>\n",
+       "      <td>NVIDIA GeForce RTX 4070 Laptop GPU</td>\n",
+       "      <td>-0.0003</td>\n",
+       "      <td>0.0016</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>34709</th>\n",
+       "      <td>2023-10-01</td>\n",
+       "      <td>Video Card Description</td>\n",
+       "      <td>NVIDIA GeForce RTX 4070 Ti</td>\n",
+       "      <td>0.0005</td>\n",
+       "      <td>0.0090</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>34710</th>\n",
+       "      <td>2023-10-01</td>\n",
+       "      <td>Video Card Description</td>\n",
+       "      <td>NVIDIA GeForce RTX 4080</td>\n",
+       "      <td>0.0011</td>\n",
+       "      <td>0.0062</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>34711</th>\n",
+       "      <td>2023-10-01</td>\n",
+       "      <td>Video Card Description</td>\n",
+       "      <td>NVIDIA GeForce RTX 4090</td>\n",
+       "      <td>-0.0010</td>\n",
+       "      <td>0.0061</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>34712</th>\n",
+       "      <td>2023-10-01</td>\n",
+       "      <td>Video Card Description</td>\n",
+       "      <td>Other</td>\n",
+       "      <td>-0.0067</td>\n",
+       "      <td>0.0956</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>12937 rows × 5 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "             date                category                                name  \\\n",
+       "7      2015-01-01        Intel CPU Speeds                 1.4 Ghz to 1.49 Ghz   \n",
+       "8      2015-01-01        Intel CPU Speeds                 1.5 Ghz to 1.69 Ghz   \n",
+       "9      2015-01-01        Intel CPU Speeds                 1.7 Ghz to 1.99 Ghz   \n",
+       "10     2015-01-01        Intel CPU Speeds                 2.0 Ghz to 2.29 Ghz   \n",
+       "11     2015-01-01        Intel CPU Speeds                 2.3 Ghz to 2.69 Ghz   \n",
+       "...           ...                     ...                                 ...   \n",
+       "34708  2023-10-01  Video Card Description  NVIDIA GeForce RTX 4070 Laptop GPU   \n",
+       "34709  2023-10-01  Video Card Description          NVIDIA GeForce RTX 4070 Ti   \n",
+       "34710  2023-10-01  Video Card Description             NVIDIA GeForce RTX 4080   \n",
+       "34711  2023-10-01  Video Card Description             NVIDIA GeForce RTX 4090   \n",
+       "34712  2023-10-01  Video Card Description                               Other   \n",
+       "\n",
+       "       change  percentage  \n",
+       "7      0.0002      0.0065  \n",
+       "8      0.0001      0.0182  \n",
+       "9     -0.0005      0.0480  \n",
+       "10    -0.0025      0.0963  \n",
+       "11    -0.0002      0.2202  \n",
+       "...       ...         ...  \n",
+       "34708 -0.0003      0.0016  \n",
+       "34709  0.0005      0.0090  \n",
+       "34710  0.0011      0.0062  \n",
+       "34711 -0.0010      0.0061  \n",
+       "34712 -0.0067      0.0956  \n",
+       "\n",
+       "[12937 rows x 5 columns]"
+      ]
+     },
+     "execution_count": 80,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Drop missing data\n",
+    "steam_cpu_gpu = steam_cpu_gpu.dropna()\n",
+    "\n",
+    "assert steam_cpu_gpu[steam_cpu_gpu.isnull().any(axis=1)].shape == (0,5)\n",
+    "steam_cpu_gpu"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(12993, 5)"
+       "(12937, 5)"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 74,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -449,7 +725,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Our proposed data will mainly come from Steam surveys, company sales, general finance data, and other easily-accessible, and public information. Because the data from the Steam surveys is already anonymized, there should not be any ethical or privacy concerns with being able to extrapolate personal identifiable information from the survey data. However, this makes it difficult to account for any potential biases in the dataset as we can only guess at the demographic of Steam users who answered the survey. Additionally, in these types of surveys it is important to be aware of many different types of biases that may come into play, including non-response, self-reporting, and other confounding variables, which could lead to a disproportionate amount of high-end hardware appearing in survey results. One potential source of data we have discussed involves scraping data from websites, which may not be legal/allowed depending on the website. As we consider other potential data sources, being aware of terms of service and other restrictions will be an important factor in choosing our final datasets. Regarding company sales and finance data, we don’t anticipate any ethical or privacy related concerns in our use of the data since by nature it is anonymized. There is potential to be able to identify individual companies or investors through the data, one way to address this is simply aggregating data, since we only require a broader overview. There may be concerns as to how this data is acquired and any potential biases that may be introduced. To help detect these biases as we perform analysis of the data, we will be careful to thoroughly explore the data before deeper analysis, attempting to fully understand it and being careful to note factors that may indicate biases in the data. In our post-analysis, we will discuss the results of our exploration. If we suspect any biases, we will explain their significance and the impact on the results of our analysis."
+    "Our data come from Steam surveys, company sales, general finance data, and other easily-accessible, and public information. Because the data from the Steam surveys is already anonymized, there should not be any ethical or privacy concerns with being able to extrapolate personal identifiable information from the survey data. However, this makes it difficult to account for any potential biases in the dataset as we can only guess at the demographic of Steam users who answered the survey. Additionally, in these types of surveys it is important to be aware of many different types of biases that may come into play, including non-response, self-reporting, and other confounding variables, which could lead to a disproportionate amount of high-end hardware appearing in survey results. One potential source of data we have discussed involves scraping data from websites, which may not be legal/allowed depending on the website. As we consider other potential data sources, being aware of terms of service and other restrictions will be an important factor in choosing our final datasets. Regarding company sales and finance data, we don’t anticipate any ethical or privacy related concerns in our use of the data since by nature it is anonymized. There is potential to be able to identify individual companies or investors through the data, one way to address this is simply aggregating data, since we only require a broader overview. There may be concerns as to how this data is acquired and any potential biases that may be introduced. To help detect these biases as we perform analysis of the data, we will be careful to thoroughly explore the data before deeper analysis, attempting to fully understand it and being careful to note factors that may indicate biases in the data. In our post-analysis, we will discuss the results of our exploration. If we suspect any biases, we will explain their significance and the impact on the results of our analysis."
    ]
   },
   {
@@ -490,7 +766,7 @@
     "| 11/19  | 9:00 PM  | Finalize and submit data checkpoint; Import & Wrangle Data; EDA  | Review/Edit wrangling/EDA; Discuss Analysis Plan; Draft EDA Checkpoint;   |\n",
     "| 11/26  |9:00 PM  | Finalize EDA Checkpoint and submit; Begin Anlysis| Discuss/edit Analysis  |\n",
     "| 12/03  | 9:00 PM  | Complete analysis; Draft results/conclusion/discussion; | Discuss/edit final project |\n",
-    "| 12/10  | 9:00 PM  | Make demo video| Turn in Final Prjoect & Video |"
+    "| 12/10  | 9:00 PM  | Make demo video| Turn in Final Project & Video |"
    ]
   },
   {
